# data_quality

./: .gitignore  404.html  README.md  index.html  inferred_schema.json  mkdocs.yml  my_duckdb.db  objects.inv  pyproject.toml  schema_crm.py
app/: etl.py  schemas.py
docs/: index.md
github/workflows/: ci.yml
search/: search_index.json
site/: index.html
site/search/: search_index.json
tests/: test_etl.py  test_func_etl.py
