[tool.poetry]
name = "data-quality"
version = "0.1.0"
description = ""
authors = ["Luiz Fernando <luizfsoliveira.lm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-material = "^9.5.49"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
taskipy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format= """
isort .
black .
"""
test = "pytest -v"
run = """
python3 app/main.pytest
"""
doc = "mkdocs serve"
